2011-05-11  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc: Remove useless comment.

2011-05-11  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (EnumProcessModules): Remove.
	* dlfcn.cc (dlopen): Make sure errno is set if an error occurs.
	(dlsym): Rewrite using RtlQueryProcessDebugInformation instead of
	EnumProcessModules.
	* ntdll.h (struct _DEBUG_MODULE_ARRAY): Define.
	(RtlCreateQueryDebugBuffer): Declare.
	(RtlDestroyQueryDebugBuffer): Declare.
	(RtlQueryProcessDebugInformation): Declare.

2011-05-11  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (GetModuleFileNameExW): Remove.
	* autoload.cc (GetModuleInformation): Remove.

2011-05-11  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (QueryWorkingSet): Remove.

2011-05-11  Ryan Johnson  <ryan.johnson@cs.utoronto.ca>

	* fhandler_process.cc (format_process_maps): Rework to report
	all mapped address space in a process (committed or reserved),
	identifying the nature of the mapping (mapped file/image, heap,
	shared memory) when possible.
	(dos_drive_mappings): New helper classes.
	(heap_info): Ditto.
	* ntdll.h (struct _MEMORY_SECTION_NAME): Define.

2011-05-11  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (GetProcessMemoryInfo): Remove.
	* resource.cc (fill_rusage): Call NtQueryInformationProcess rather than
	GetProcessMemoryInfo to drop a psapi dependency.

2011-05-11  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (get_inet_addr): Rearrange for better readability.
	Make waiting loop interruptible and cancelable.  Check for SYSTEM DOS
	flag before reading the file.  Change return value to return 0 on
	success, SOCKET_ERROR on failure.
	(fhandler_socket::bind): Only set R/O DOS flag on filesystems not
	supporting ACLs.
	(fhandler_socket::connect): Accommodate changed return values from
	get_inet_addr.  Use SOCKET_ERROR instead of -1.
	(fhandler_socket::sendto): Accommodate changed return values from
	get_inet_addr.